fix: update comments and organize styles for better clarity and maintainability

--- a/iframe-content/settings.html
+++ b/iframe-content/settings.html
@@ -9,7 +9,7 @@
     <script src="https://yehormovchan.github.io/static/script.js"></script>
     <link rel="stylesheet" href="https://yehormovchan.github.io/static/iframe-styles.css">
     <style>
-        .subject-container, .nutrition-price-container, .lesson-price-container {
+        /* .subject-container, .nutrition-price-container, .lesson-price-container {
             max-height: 400px;
             overflow-y: auto;
             margin-bottom: 20px;
@@ -301,7 +301,7 @@
             padding: 8px;
             border: 1px solid #ddd;
             border-radius: 3px;
-        }
+        } */
     </style>
 </head>
 <body>
