fix: remove unnecessary class from history tables for cleaner markup

--- a/iframe-content/settings.html
+++ b/iframe-content/settings.html
@@ -112,7 +112,7 @@
     <div class="modal hidden history-modal" id="nutrition-history-modal">
         <h4>Історія змін вартості харчування</h4>
         <div class="history-modal-content">
-            <table class="history-table" id="nutrition-history-table">
+            <table id="nutrition-history-table">
                 <thead>
                     <tr>
                         <th>Дата від</th>
@@ -133,7 +133,7 @@
     <div class="modal hidden history-modal" id="lesson-history-modal">
         <h4>Історія змін вартості навчання</h4>
         <div class="history-modal-content">
-            <table class="history-table" id="lesson-history-table">
+            <table id="lesson-history-table">
                 <thead>
                     <tr>
                         <th>Дата від</th>
