feat: add radio buttons for selecting days of the week in the schedule

--- a/iframe-content/schedule.html
+++ b/iframe-content/schedule.html
@@ -270,11 +270,15 @@
             <legend>Оберіть день тижня:</legend>
             <div class="toggle">
               <input type="radio" name="sizeBy" value="monday" id="sizeMonday" checked="checked" />
-              <label for="sizeWeight">Понеділок</label>
+              <label for="sizeMonday">Понеділок</label>
               <input type="radio" name="sizeBy" value="tuesday" id="sizeTuesday" />
-              <label for="sizeDimensions">Вівторок</label>
+              <label for="sizeTuesday">Вівторок</label>
               <input type="radio" name="sizeBy" value="wednesday" id="sizeWednesday" />
-              <label for="sizeDimensions">Середа</label>
+              <label for="sizeWednesday">Середа</label>
+              <input type="radio" name="sizeBy" value="thursday" id="sizeThursday" />
+              <label for="sizeThursday">Четвер</label>
+              <input type="radio" name="sizeBy" value="friday" id="sizeFriday" />
+              <label for="sizeFriday">П'ятниця</label>
             </div>
           </fieldset>
 
