fix: update radio button values for day selection to use numeric values for consistency

--- a/iframe-content/schedule.html
+++ b/iframe-content/schedule.html
@@ -260,15 +260,15 @@
           <fieldset>
             <legend>Оберіть день тижня:</legend>
             <div class="toggle">
-              <input type="radio" name="daySelect" value="monday" id="sizeMonday" checked="checked" />
+              <input type="radio" name="daySelect" value="1" id="sizeMonday" checked="checked" />
               <label for="sizeMonday">Понеділок</label>
-              <input type="radio" name="daySelect" value="tuesday" id="sizeTuesday" />
+              <input type="radio" name="daySelect" value="2" id="sizeTuesday" />
               <label for="sizeTuesday">Вівторок</label>
-              <input type="radio" name="daySelect" value="wednesday" id="sizeWednesday" />
+              <input type="radio" name="daySelect" value="3" id="sizeWednesday" />
               <label for="sizeWednesday">Середа</label>
-              <input type="radio" name="daySelect" value="thursday" id="sizeThursday" />
+              <input type="radio" name="daySelect" value="4" id="sizeThursday" />
               <label for="sizeThursday">Четвер</label>
-              <input type="radio" name="daySelect" value="friday" id="sizeFriday" />
+              <input type="radio" name="daySelect" value="5" id="sizeFriday" />
               <label for="sizeFriday">П'ятниця</label>
             </div>
           </fieldset>
