fix: remove border and background color from fieldset for improved styling consistency

--- a/iframe-content/schedule.html
+++ b/iframe-content/schedule.html
@@ -273,14 +273,14 @@
             </div>
           </fieldset>
 
-            <div class="addition-filter">
+            <!-- <div class="addition-filter">
               <label for="date-select">Історія розкладів:</label>
               <div class="select-wrapper">
                 <select id="date-select">
                     <option value="">Актуальний</option>
                 </select>
               </div>
-            </div>
+            </div> -->
         </div>
     <!-- Таблиця розкладу -->
         <table id="scheduleTable">
