fix: correct radio button label associations and remove unused history label for clarity

--- a/iframe-content/schedule.html
+++ b/iframe-content/schedule.html
@@ -261,11 +261,11 @@
                 <legend>Відображати розклад по:</legend>
                 <div class="toggle">
                   <input type="radio" name="schedule-view" value="days" id="sizeDays" checked="checked" />
-                  <label for="sizeMonday">Дням тижня</label>
+                  <label for="sizeDays">Дням тижня</label>
                   <input type="radio" name="schedule-view" value="teachers" id="sizeTeachers" />
-                  <label for="sizeTuesday">Вчителям</label>
+                  <label for="sizeTeachers">Вчителям</label>
                   <input type="radio" name="schedule-view" value="classes" id="sizeClasses" />
-                  <label for="sizeWednesday">Класам</label>
+                  <label for="sizeClasses">Класам</label>
                 </div>
             </fieldset>
             <div class="addition-filter">
@@ -284,12 +284,12 @@
                   <label for="sizeFriday">П'ятниця</label>
                 </div>
               </fieldset>
-              <label for="date-select">Історія розкладів:</label>
+              <!-- <label for="date-select">Історія розкладів:</label>
               <div class="select-wrapper">
                 <select id="date-select">
                     <option value="">Актуальний</option>
                 </select>
-              </div>
+              </div> -->
             </div>
         </div>
     <!-- Таблиця розкладу -->
