fix: add missing closing div for class selection in schedule management

--- a/iframe-content/schedule.html
+++ b/iframe-content/schedule.html
@@ -316,6 +316,7 @@
                   <select id="classSelect">
                     <option value="">--Виберіть клас--</option>
                   </select>
+                </div>
               </div>
               <!-- <label for="date-select">Історія розкладів:</label>
               <div class="select-wrapper">
