--- a/iframe-content/schedule.html
+++ b/iframe-content/schedule.html
@@ -757,10 +757,10 @@
   <link rel="stylesheet" href="https://yehormovchan.github.io/static/radio-toggle.css">
   <script>
     $(document).ready(function() {
-      let teachers = [];
-      let subjects = [];
-      let classes = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11];
-      let scheduleData = {};
+      const teachers = [];
+      const subjects = [];
+      const classes = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11];
+      const scheduleData = {};
 
 
       $.each(classes, function(index, classNumber) {
@@ -819,24 +819,28 @@
           $(this).empty();
         });
         
-        $.getJSON('https://school-f6vi.onrender.com/view/schedule/actual/' + day, function(data) {
-          $.each(data, function(index, entry) {
-            var key = entry.classField + '-' + entry.lessonNumber;
-            scheduleData[key] = {
-                classField: entry.classField,
-                dayOfWeek: entry.dayOfWeek,
-                from: entry.from,
-                to: entry.to,
-                teacher: entry.teacherId,
-                subject: entry.subjectId,
-                lessonNumber:entry.lessonNumber
-            }
-            // Заповнюємо відповідну клітинку таблиці
-            $('#scheduleTable-days tbody tr[data-lesson="'+ entry.lessonNumber +'"] td[data-class="'+ entry.classField +'"]').html(
-              '<span class="subject-name">' + entry.subjectName + '</span><br>' +
-              '<span class="teacher-name">' + entry.teacherName + '</span>'
-            );
-          });
+        $.getJSON('https://school-f6vi.onrender.com/view/schedule/actual/' + day, (data)=> {
+          let lessons = [1, 2, 3, 4, 5, 6, 7, 8];
+          let clases = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11];
+
+          for(let i=1; i<9; i++){
+            const lessonSchedule = data.filter((lesson)=> lesson.lessonNumber == i);
+            const tr = document.createElement("tr");
+            classes.forEach((classNumber) => {
+              const lesson = lessonSchedule.find((lesson) => lesson.classField == classNumber);
+              const td = document.createElement("td");
+              if(lesson){
+                td.setAttribute("data-lesson", lesson.id);
+                td.innerHTML = `<span class="subject main-text">${lesson.subjectName}</span> <br><span class="teacher small-text">${lesson.teacherName}</span>`;
+              }
+              else{
+                td.setAttribute("data-lesson", "");
+                td.innerHTML = `<span class="subject main-text"></span> <br><span class="teacher small-text"></span>`;
+              }
+              tr.appendChild(td);
+            })
+            $('#schedule-by-days-body').append(tr);
+          }
         });
       }
     
