fix: update variable declarations for teachers, subjects, classes, and scheduleData to use let for better scope management

--- a/iframe-content/schedule.html
+++ b/iframe-content/schedule.html
@@ -757,10 +757,10 @@
   <link rel="stylesheet" href="https://yehormovchan.github.io/static/radio-toggle.css">
   <script>
     $(document).ready(function() {
-      const teachers = [];
-      const subjects = [];
-      const classes = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11];
-      const scheduleData = {};
+      let teachers = [];
+      let subjects = [];
+      let classes = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11];
+      let scheduleData = {};
 
 
       $.each(classes, function(index, classNumber) {
