fix: add initial schedule loading and correct table header markup

--- a/iframe-content/schedule.html
+++ b/iframe-content/schedule.html
@@ -843,7 +843,8 @@
           }
         });
       }
-    
+      
+      loadSchedule(1);
     });
   </script>
 </head>
@@ -920,12 +921,12 @@
 
     <table id="schedule-by-teacher">
       <thead>
-        <tr>Номер уроку</tr>
-        <tr>Понеділок</tr>
-        <tr>Вівторок</tr>
-        <tr>Середа</tr>
-        <tr>Четвер</tr>
-        <tr>П'ятниця</tr>
+        <th>Номер уроку</th>
+        <th>Понеділок</t>
+        <th>Вівторок</th>
+        <th>Середа</th>
+        <th>Четвер</th>
+        <th>П'ятниця</th>
       </thead>
       <tbody id="schedule-by-teacher-body">
 
@@ -933,12 +934,12 @@
     </table>
     <table id="schedule-by-class">
       <thead>
-        <tr>Номер уроку</tr>
-        <tr>Понеділок</tr>
-        <tr>Вівторок</tr>
-        <tr>Середа</tr>
-        <tr>Четвер</tr>
-        <tr>П'ятниця</tr>
+        <th>Номер уроку</th>
+        <th>Понеділок</th>
+        <th>Вівторок</th>
+        <th>Середа</th>
+        <th>Четвер</th>
+        <th>П'ятниця</th>
       </thead>
       <tbody id="schedule-by-class-body">
 
