--- a/iframe-content/schedule.html
+++ b/iframe-content/schedule.html
@@ -760,7 +760,7 @@
       let teachers = [];
       let subjects = [];
       let classes = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11];
-      let scheduleData = {};
+      let scheduleData = [];
 
 
       $("#teacherSelect-filter").hide();
@@ -820,7 +820,7 @@
       });
     
       function loadSchedule(day) {
-        scheduleData = {};
+
         $('#schedule-by-days tbody').each(function() {
           $(this).empty();
         });
@@ -828,6 +828,7 @@
         $.getJSON('https://school-f6vi.onrender.com/view/schedule/actual/' + day, (data)=> {
           let lessons = [1, 2, 3, 4, 5, 6, 7, 8];
           let clases = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11];
+          scheduleData = data;
 
           for(let i=1; i<9; i++){
             const lessonSchedule = data.filter((lesson)=> lesson.lessonNumber == i);
@@ -838,24 +839,70 @@
             classes.forEach((classNumber) => {
               const lesson = lessonSchedule.find((lesson) => lesson.classField == classNumber);
               const td = document.createElement("td");
+              td.className = "lesson-cell";
               if(lesson){
                 td.setAttribute("data-lesson", lesson.id);
+                td.setAttribute("data-class", classNumber);
+                td.setAttribute("data-lesson-number", i);
                 td.innerHTML = `<span class="subject main-text">${lesson.subjectName}</span> <br><span class="teacher small-text">${lesson.teacherName}</span>`;
               }
               else{
                 td.setAttribute("data-lesson", "");
                 td.innerHTML = `<span class="subject main-text"></span> <br><span class="teacher small-text"></span>`;
               }
+              td.onclick = function() {
+                $('#modal-title').text(`Редагування розкладу для ${classNumber} класу`);
+                $('#subject-select').val(lesson ? lesson.subjectId : "");
+                $('#teacher-select').val(lesson ? lesson.teacherId : "");
+                $('.modal').show();
+                $('#modalSave').off('click').on('click', ()=>{
+                  const subjectId = $('#subject-select').val();
+                  const teacherId = $('#teacher-select').val();
+                  const lessonId = td.getAttribute("data-lesson");
+                  const classField = td.getAttribute("data-class");
+                  const lessonNumber = td.getAttribute("data-lesson-number");
+                  scheduleData = scheduleData.filter((lesson)=> lesson.id != lessonId);
+                  scheduleData.push({
+                    subject: subjectId,
+                    teacher: teacherId,
+                    classField: classField,
+                    lessonNumber: lessonNumber,
+                    dayOfWeek: day,
+                    from: new Date(),
+                    to: null,
+                  });
+                  td.innerHTML = `<span class="subject main-text">${lesson.subjectName}</span> <br><span class="teacher small-text">${lesson.teacherName}</span>`;
+                  td.setAttribute("data-lesson", lessonId);
+                  td.setAttribute("data-class", classField);
+                  td.setAttribute("data-lesson-number", lessonNumber);
+                })
+              };
               tr.appendChild(td);
             })
             $('#schedule-by-days-body').append(tr);
           }
         });
+
       }
       
       $("input[name='daySelect']").change(function() {
         let selectedDay = $(this).val();
         loadSchedule(selectedDay);
+      });
+
+      $('#saveSchedule').click(function() {
+        $.ajax({
+          url: 'https://school-f6vi.onrender.com/schedule/save', 
+          method: 'POST',
+          contentType: 'application/json',
+          data: JSON.stringify(scheduleArray),
+          success: function(response) {
+            alert("Розклад успішно збережено!");
+          },
+          error: function(xhr, status, error) {
+            alert("Помилка при збереженні розкладу: " + error);
+          }
+        });
       });
 
       loadSchedule(1);
@@ -959,6 +1006,8 @@
 
       </tbody>
     </table>
+
+    <button id="saveSchedule">Зберегти розклад</button>
 
     <div class="modal hidden">
       <h2 id="modal-title"></h2>
