--- a/iframe-content/schedule.html
+++ b/iframe-content/schedule.html
@@ -792,6 +792,9 @@
       $("#teacherSelect-filter").hide();
       $("#classSelect-filter").hide();
       $("#scheduleHistoryTable").hide();
+      $("#class-select-wrapper").hide();
+      $("#teacher-select-wrapper").show();
+      $("#subject-select-wrapper").show();
 
       $("input[name='schedule-view']").change(function() {
           var selectedValue = $(this).val();
@@ -849,9 +852,9 @@
               const lesson = lessonSchedule.find((lesson) => lesson.classField == classNumber);
               const td = document.createElement("td");
               td.className = "lesson-cell";
+              td.setAttribute("data-lesson", lesson.id);
+              td.setAttribute("data-class", classNumber);
               if(lesson){
-                td.setAttribute("data-lesson", lesson.id);
-                td.setAttribute("data-class", classNumber);
                 td.setAttribute("data-lesson-number", i);
                 td.innerHTML = `<span class="subject main-text">${lesson.subjectName}</span> <br><span class="teacher small-text">${lesson.teacherName}</span>`;
               }
@@ -880,10 +883,13 @@
                     from: new Date(),
                     to: null,
                   });
-                  td.innerHTML = `<span class="subject main-text">${lesson.subjectName}</span> <br><span class="teacher small-text">${lesson.teacherName}</span>`;
+                  let subjectName = subjects.find((subject)=> subject.id == subjectId).name;
+                  let teacherName = teachers.find((teacher)=> teacher.id == teacherId).name;
+                  td.innerHTML = `<span class="subject main-text">${subjectName}</span> <br><span class="teacher small-text">${teacherName}</span>`;
                   td.setAttribute("data-lesson", lessonId);
                   td.setAttribute("data-class", classField);
                   td.setAttribute("data-lesson-number", lessonNumber);
+                  $('.modal').hide();
                 })
               };
               tr.appendChild(td);
@@ -912,6 +918,10 @@
             alert("Помилка при збереженні розкладу: " + error);
           }
         });
+      });
+
+      $('#modalCancel').click(function() {
+        $('.modal').hide();
       });
 
       loadSchedule(1);
