--- a/iframe-content/schedule.html
+++ b/iframe-content/schedule.html
@@ -842,7 +842,7 @@
         
         $.getJSON('https://school-f6vi.onrender.com/view/schedule/actual/' + day, (data)=> {
           let lessons = [1, 2, 3, 4, 5, 6, 7, 8];
-          let clases = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11];
+          let classes = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11];
           scheduleData = data;
 
           for(let i=1; i<9; i++){
