fix: update lesson cell data attribute to use lesson class field for accuracy

--- a/iframe-content/schedule.html
+++ b/iframe-content/schedule.html
@@ -965,7 +965,7 @@
               td.className = "lesson-cell";
               td.setAttribute("data-lesson-number", i);
               if(lesson){
-                td.setAttribute("data-class", classNumber);
+                td.setAttribute("data-class", lesson.classField);
                 td.setAttribute("data-lesson", lesson.id);
                 td.innerHTML = `<span class="subject main-text">${lesson.subjectName}</span> <br><span class="grade small-text">${lesson.classField}</span>`;
               }
