fix: update teacher and class select element IDs for schedule functionality

--- a/iframe-content/schedule.html
+++ b/iframe-content/schedule.html
@@ -1008,14 +1008,14 @@
         });
       }
 
-      $('#teacher-select').change(function() {
+      $('#teacher-select-for-schedule').change(function() {
         let selectedTeacher = $(this).val();
         loadScheduleByTeacher(selectedTeacher);
       });
 
       
 
-      $('#class-select').change(function() {
+      $('#class-select-for-schedule').change(function() {
         let selectedClass = $(this).val();
         loadScheduleByClass(selectedClass);
       });
