--- a/iframe-content/schedule.html
+++ b/iframe-content/schedule.html
@@ -751,6 +751,8 @@
   <meta charset="UTF-8">
   <title>Редагування розкладу</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
   <script src="https://yehormovchan.github.io/static/script.js"></script>
   <link rel="stylesheet" href="https://yehormovchan.github.io/static/iframe-styles.css">
   <link rel="stylesheet" href="https://yehormovchan.github.io/static/style.css">
