--- a/iframe-content/groups/group-members.html
+++ b/iframe-content/groups/group-members.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://yehormovchan.github.io/static/iframe-styles.css">
+    <script src="https://yehormovchan.github.io/static/script.js"></script>
 </head>
 <body>
     <h1>Учасники гуртка</h1>
