--- a/iframe-content/kid-list.html
+++ b/iframe-content/kid-list.html
@@ -30,7 +30,8 @@
         <button onclick="$(`#create-transaction`).fadeIn()">Додати оплату</button>
     </div>
     <div id="students-list" class="item-list">
-        <input type="text" id="student-search" placeholder="Пошук учня..." style="margin-bottom: 10px; padding: 5px; width: 100%;">
+        <br>
+        <input type="text" id="student-search" placeholder="Пошук учня...">
         <div class="loader"></div>
         <div class="request-error">Сталася помилка, спробуйте пізніше.</div>
     </div>
